# AiCotUiTools

./: .gitignore  Output6.txt  QUICKSTART.md  README.md  main.py  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  package.json  pyproject.toml
webapp/: .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  start-backend.sh  start-frontend.sh  test_ws.py
webapp/backend/: .env.example  connection_manager.py  enhanced_agent.py  pyproject.toml  requirements.txt  server.py
webapp/frontend/: index.html  package-lock.json  package.json
webapp/frontend/src/: App.tsx  index.css  types.ts
webapp/frontend/src/hooks/: useWebSocket.ts
webapp/frontend/src/tools/: uiTools.ts
