[project]
name = "llm-agent-backend"
version = "1.0.0"
description = "LLM Agent Backend with FastAPI and WebSockets"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "openai>=2.4.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
]
